--- a/7.2/playbook/site.yml
+++ b/7.2/playbook/site.yml
@@ -7,16 +7,16 @@
         url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{
             vector_version }}-x86_64-unknown-linux-gnu.tar.gz"
         dest: "./vector-{{ vector_version }}-x86_64-unknown-linux-gnu.tar.gz"
-        mode: 0755
+        mode: "0755"
         timeout: 90
         force: true
-      tags: download
+      tags: download_distr
     - name: Create directory for Vector
       ansible.builtin.file:
         state: directory
         path: "{{ vector_dir }}"
-        mode: 0755
-      tags: CD
+        mode: "0755"
+      tags: create_dir
     - name: Extract Vector
       ansible.builtin.unarchive:
         copy: false
@@ -24,10 +24,10 @@
         dest: "{{ vector_dir }}"
         extra_opts: [--strip-components=2]
         creates: "{{ vector_dir }}/bin/vector"
-      tags: extract
-    - name: environment Vector
+      tags: extract_distr
+    - name: Environment Vector
       ansible.builtin.template:
         src: templates/vector.sh.j2
         dest: /etc/profile.d/vector.sh
-        mode: 0755
-      tags: env
+        mode: "0755"
+      tags: env_vector
