--- a/7.2/playbook/group_vars/vector/vars.yml
+++ b/7.2/playbook/group_vars/vector/vars.yml
@@ -1,3 +1,12 @@
 ---
-vector_version: "0.21.0"
-vector_dir: "/etc/vector"
+vector_version: "0.29.1"
+
+# Path
+vector_bin_path: "/usr/bin/"
+vector_config_path: "/etc/vector"
+vector_env_path: "/var/lib/vector"
+vector_service_path: "/etc/systemd/system"
+
+# Templates
+vector_config_file: "vector.toml.j2"
+vector_service_file: "vector.service.j2"
